--- a/test-cases.yml
+++ b/test-cases.yml
@@ -288,3 +288,61 @@
   expected-result: |
     Открылась страница регистрации/авторизации
 
+- summary: |
+    Проверка возможности посоревноваться без авторизации
+  requirement: |
+    Пользователь может попробовать посоревноваться, не проходя процедуру регистрации
+  prerequisites: |
+    Пользователь не авторизован 
+  test-data: |
+    -
+  steps:
+    - Зайти на https://codebattle.hexlet.io/
+    - Кликнуть на [Try simple battle]
+    - Провести состязание
+  expected-result: |
+   Поединок можно провести от начала и до конца
+
+
+- summary: |
+    Проверка появляния модального окна с предложением скачать расширение для браузера
+  requirement: |
+    Пользователь может скачать расширения для браузера после перехода в состязание
+  prerequisites: |
+    lastCheckExtension отсутствует в local storage  
+  test-data: |
+    -
+  steps:
+    - Зайти на https://codebattle.hexlet.io/
+    - Кликнуть на [Try simple battle]
+  expected-result: |
+   Появилось модальное окно с предложением установить расширение 
+
+- summary: |
+    Проверка появляния модального окна с предложением скачать расширение для браузера
+  requirement: |
+    Пользователь не должен получать предложение о скачивании расширения после того, как он его закрыл в первый раз, пока жива текущая сессия
+  prerequisites: |
+    lastCheckExtension есть в local storage  
+  test-data: |
+    -
+  steps:
+    - Зайти на https://codebattle.hexlet.io/
+    - Кликнуть на [Try simple battle]
+  expected-result: |
+   Не появилось модальное окно с предложением установить расширение 
+
+- summary: |
+    Проверка появляния модального окна с предложением скачать расширение для браузера
+  requirement: |
+    Пользователь не должен получать предложение о скачивании расширения, если оно установлено 
+  prerequisites: |
+    - Расширение установлено  
+  test-data: |
+    -
+  steps:
+    - Зайти на https://codebattle.hexlet.io/
+    - Кликнуть на [Try simple battle]
+  expected-result: |
+   Не появилось модальное окно с предложением установить расширение 
+
