--- a/testing-report.yml
+++ b/testing-report.yml
@@ -1,1 +1,255 @@
+- summary: |
+    Проверка возможности соревноваться с ботом без авторизации
+  status: pass
+    
+- summary: |
+    Проверка возможности авторизации через email/пароль
+  status: pass
+    
+- summary: |
+    Проверка возможности авторизации через email/пароль
+  status: pass
+
+- summary: |
+    Проверка валидации полей авторизации через email/пароль
+  status: pass
+
+- summary: |
+    Проверка возможности авторизации через Github
+  status: pass
+
+- summary: |
+    Проверка возможности авторизации через Discord
+  status: pass
+
+
+- summary: |
+    Проверка восстановления пароля 
+  status: pass
+    
+- summary: |
+    Проверка восстановления пароля 
+  status: pass
+
+- summary: |
+    Проверка восстановления пароля 
+  status: pass
+
+- summary: |
+    Проверка регистрации пользователя 
+  status: pass
+
+- summary: |
+    Проверка регистрации пользователя 
+  status: pass
+
+- summary: |
+    Проверка регистрации пользователя 
+  status: pass
+    
+- summary: |
+    Проверка регистрации пользователя 
+  status: pass
+
+- summary: |
+    Проверка регистрации пользователя 
+  status: pass
+
+- summary: |
+    Проверка возможности авторизации через Github со страницы регистрации
+  status: pass
+
+- summary: |
+    Проверка возможности авторизации через Discord со страницы регистрации
+  status: pass
+
+- summary: |
+    Проверка возможности перехода на страницу регистрации/авторизации со страницы авторизации/регистрации
+  status: pass
+
+- summary: |
+    Проверка возможности посоревноваться без авторизации
+  status: pass
+
+
+- summary: |
+    Проверка появляния модального окна с предложением скачать расширение для браузера
+  status: pass
+
+- summary: |
+    Проверка появляния модального окна с предложением скачать расширение для браузера
+  status: pass
+
+- summary: |
+    Проверка появляния модального окна с предложением скачать расширение для браузера
+  status: pass
+
+- summary: |
+    Проверка отображения окна для входа в игру 
+  status: pass
+
+- summary: |
+    Проверка отображения окна для входа в игру 
+  status: pass
+
+- summary: |
+    Проверка выбора сложности игры
+  status: pass
+
+- summary: |
+    Проверка выбора сложности игры
+  status: pass
+
+- summary: |
+    Проверка выбора сложности игры
+  status: pass
+
+
+- summary: |
+    Проверка выбора сложности игры
+  status: pass
+
+- summary: |
+    Проверка выбора типа игры 
+  status: pass
+
+- summary: |
+    Проверка выбора типа игры 
+  status: pass
+
+- summary: |
+    Проверка выбора типа игры 
+  status: pass
+
+
+- summary: |
+    Проверка работы ползунка выбора времени игры
+  status: pass
+
+- summary: |
+    Проверка работы ползунка выбора времени игры
+  status: pass
+
+- summary: |
+    Проверка работы выбора задания для игры
+  status: pass
+
+- summary: |
+    Проверка работы выбора тегов тематики для игры
+  status: pass
+
+- summary: |
+    Проверка работы выбора тегов тематики для игры
+  status: pass
+
+- summary: |
+    Проверка работы запуска игры
+  status: pass
+
+- summary: |
+    Проверка работы подсказок при первом запуске игры
+  status: pass
+
+
+- summary: |
+    Проверка отсутствия подсказок 
+  status: pass
+
+- summary: |
+    Проверка отсутствия подсказок 
+  status: pass
+
+- summary: |
+    Проверка отображения задания для игры
+  status: pass
+
+
+- summary: |
+    Проверка кликабельности аватарова пользователей
+  status: pass
+
+- summary: |
+    Проверка отображения output в игры
+  status: pass
+
+
+- summary: |
+    Проверка отображения таймера
+  status: pass
+
+- summary: |
+    Проверка работы таймера
+  status: pass
+
+- summary: |
+    Проверка работы выбора языка программирования для игры 
+  status: pass
+
+- summary: |
+    Проверка работы vim
+  status: pass
+
+- summary: |
+    Проверка работы переключения темной/светлой темы редактора
+  status: pass
+    
+- summary: |
+    Проверка работа кнопки [Сдаться]
+  status: pass
+    
+- summary: |
+    Проверка работа кнопки [Сдаться]
+  status: pass
+
+- summary: |
+    Проверка работа кнопки [Refresh]
+  status: pass
+
+- summary: |
+    Проверка работа кнопки [Check solution]
+  status: pass
+
+- summary: |
+    Проверка работа кнопки [Смена языка]
+  status: pass
+
+- summary: |
+    Проверка работа кнопки [Show guide]
+  status: pass
+
+- summary: |
+    Проверка отправки сообщения в чат
+  status: pass
+    
+- summary: |
+    Проверка отправки эмодзи в чат
+  status: pass
+  
+- summary: |
+    Проверка отправки эмодзи в чат
+  status: pass
+
+- summary: |
+    Проверка получения сообщения в чат
+  status: pass
+
+- summary: |
+    Проверка отображения статистики игрока
+  status: pass
+
+- summary: |
+    Проверка отображения написания кода другим игроков или ботом
+  status: pass
+
+- summary: |
+    Проверка отображения истории состязания
+  status: pass
+
+- summary: |
+    Проверка возможности рематча
+  status: pass
+
+- summary: |
+    Проверка возможности перейти на домашнюю страницу со страницы игры
+  status: pass
 
