--- a/requirements.yml
+++ b/requirements.yml
@@ -1,11 +1,20 @@
 functional:
   - Пользователь может соревноваться с ботами 
-  - Пользователь может соревноваться с другим пользователем по ссылке
+  - Пользователь может приглашать других игроков
   - Пользователю доступны рейтинги
   - Пользователь может видеть решение задач другим пользователем онлайн
   - Пользователь может настраивать сложность, время и тип соревнований
   - Пользователь может выбирать язык программирования для решения задач
   - Пользователь может авторизовываться и регистрироваться разными способами на сайт
+  - Пользователь может создавать игры без регистрации
+  - Пользователь может присоединяться к другим играм
+  - Пользователь может видеть 2 редактора - свой и чужой
+  - Пользователи могут отправлять сообщения в чат
+  - Пользователь может отправить задание на проверку
+  - Пользователь может переподключиться в игру 
+  - Пользователь может видеть задание к игре 
+  - Игра заканчивается, когда кто-то из игроков решил задание
+  - Игроки могут оставаться в игре, если другой вышел
 non-functional:
   - Сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы
   - Сайт должен быть безопасным и защищать данные пользователя
@@ -14,3 +23,4 @@ non-functional:
   - Сайт должен быть способен обрабатывать большое количество трафика (например, 1000 одновременных пользователей)
 implicit:
   - Должно быть форматирование ЯП
+  
