--- a/test-cases.yml
+++ b/test-cases.yml
@@ -13,7 +13,7 @@
     Открылась страница состязания
     
 - summary: |
-    Проверка возможности авторизации через email/пароль
+    Успешная авторизация
   requirement: |
     Пользователь может авторизоваться через существующую связку email/пароль
   prerequisites: |
@@ -29,7 +29,7 @@
     Успешная авторизация
     
 - summary: |
-    Проверка возможности авторизации через email/пароль
+    Не успешная авторизация через некорректный email
   requirement: |
     Пользователь не может авторизоваться через несуществующую связку email/пароль
   prerequisites: |
@@ -66,7 +66,7 @@
   requirement: |
     Пользователь может авторизоваться через сквозную авторизацию через GitHub 
   prerequisites: |
-    Пользователь не авторизован 
+    Пользователь не авторизован, имеется аккаунт на Github
   test-data: |
     -
   steps:
@@ -84,7 +84,7 @@
   requirement: |
     Пользователь может авторизоваться через сквозную авторизацию через Discord 
   prerequisites: |
-    Пользователь не авторизован 
+    Пользователь не авторизован, имеется аккаунт на Discord
   test-data: |
     -
   steps:
@@ -99,13 +99,13 @@
 
 
 - summary: |
-    Проверка восстановления пароля 
+    Успешная смена пароля
   requirement: |
     Пользователь может восстановить пароль через форму восстановления пароля на странице авторизации
   prerequisites: |
     Пользователь не авторизован 
   test-data: |
-    -
+    - login: kvskgd@gmail.com, pass: Rainbow7!
   steps:
     - Зайти на https://codebattle.hexlet.io/
     - Кликнуть на [Sign in]
@@ -120,13 +120,13 @@
     Успешная смена пароля
     
 - summary: |
-    Проверка восстановления пароля 
+    Не успешная смена пароля с несуществующей почтой
   requirement: |
     Пользователь не может восстановить пароль через форму восстановления пароля на странице авторизации с несуществующим email
   prerequisites: |
     Пользователь не авторизован 
   test-data: |
-    -
+    - login: kvskgd@gmail.com, pass: Rainbow7!
   steps:
     - Зайти на https://codebattle.hexlet.io/
     - Кликнуть на [Sign in]
@@ -137,13 +137,13 @@
     Email not found
 
 - summary: |
-    Проверка восстановления пароля 
+    Успешная смена пароля со старым паролем
   requirement: |
     Пользователь может восстановить пароль через форму восстановления пароля на странице авторизации со старым паролем
   prerequisites: |
     Пользователь не авторизован 
   test-data: |
-    -
+    - login: kvskgd@gmail.com, pass: Rainbow7!
   steps:
     - Зайти на https://codebattle.hexlet.io/
     - Кликнуть на [Sign in]
@@ -158,13 +158,13 @@
     Успешная смена пароля
 
 - summary: |
-    Проверка регистрации пользователя 
+    Успешная регистрация пользователя 
   requirement: |
     Пользователь может зарегистрироваться на сайте с помощью email/пароль
   prerequisites: |
     Пользователь не авторизован 
   test-data: |
-    -
+    - 
   steps:
     - Зайти на https://codebattle.hexlet.io/
     - Кликнуть на [Sign up]
@@ -174,7 +174,7 @@
     Успешная регистрация
 
 - summary: |
-    Проверка регистрации пользователя 
+    Проверка регистрации пользователя с существующим email
   requirement: |
     Пользователь не может зарегистрироваться на сайте с помощью существующего email
   prerequisites: |
@@ -190,7 +190,7 @@
     Email is already taken
 
 - summary: |
-    Проверка регистрации пользователя 
+    Проверка регистрации пользователя c существующим никнеймом
   requirement: |
     Пользователь не может зарегистрироваться на сайте с помощью существующего nickname
   prerequisites: |
@@ -206,7 +206,7 @@
     Nickname is already taken
     
 - summary: |
-    Проверка регистрации пользователя 
+    Проверка регистрации пользователя с некорректным паролем 
   requirement: |
     Пользователь не может зарегистрироваться на сайте, указав пароль меньше 6 и больше 16 символов
   prerequisites: |
@@ -222,7 +222,7 @@
     Should be from 6 to 16 characters
 
 - summary: |
-    Проверка регистрации пользователя 
+    Проверка регистрации пользователя с разными паролями
   requirement: |
     Пользователь не может зарегистрироваться на сайте, указав разные пароли
   prerequisites: |
@@ -260,7 +260,7 @@
   requirement: |
     Пользователь может авторизоваться через сквозную авторизацию через Discord 
   prerequisites: |
-    Пользователь не авторизован 
+    Пользователь не авторизован, имеется аккаунт на Discord
   test-data: |
     -
   steps:
@@ -333,7 +333,7 @@
    Не появилось модальное окно с предложением установить расширение 
 
 - summary: |
-    Проверка появляния модального окна с предложением скачать расширение для браузера
+    Проверка  не появляния модального окна с предложением скачать расширение для браузера
   requirement: |
     Пользователь не должен получать предложение о скачивании расширения, если оно установлено 
   prerequisites: |
@@ -362,22 +362,7 @@
    Отображается модальное окно создания игры
 
 - summary: |
-    Проверка отображения окна для входа в игру 
-  requirement: |
-    Пользователь имеет возможность создать игру 
-  prerequisites: |
-    - Пользователь авторизован  
-  test-data: |
-    - Login: Kvskgd@gmail.com
-    - Pass: Rainbow7!
-  steps:
-    - Зайти в лобби https://codebattle.hexlet.io/#lobby
-    - Кликнуть на [Create a game]
-  expected-result: |
-   Отображается модальное окно создания игры
-
-- summary: |
-    Проверка выбора сложности игры
+    Проверка выбора 1 сложности игры
   requirement: |
     Пользователь имеет возможность создать игру определенной сложности
   prerequisites: |
@@ -394,7 +379,7 @@
     Игра создалась
 
 - summary: |
-    Проверка выбора сложности игры
+    Проверка выбора 2 сложности игры
   requirement: |
     Пользователь имеет возможность создать игру определенной сложности
   prerequisites: |
@@ -411,7 +396,7 @@
     Игра создалась
 
 - summary: |
-    Проверка выбора сложности игры
+    Проверка выбора 3 сложности игры
   requirement: |
     Пользователь имеет возможность создать игру определенной сложности
   prerequisites: |
@@ -429,7 +414,7 @@
 
 
 - summary: |
-    Проверка выбора сложности игры
+    Проверка выбора 4 сложности игры
   requirement: |
     Пользователь имеет возможность создать игру определенной сложности
   prerequisites: |
@@ -446,7 +431,7 @@
     Игра создалась
 
 - summary: |
-    Проверка выбора типа игры 
+    Проверка выбора 1 типа игры 
   requirement: |
     Пользователь имеет возможность создать игру определенного типа 
   prerequisites: |
@@ -463,7 +448,7 @@
     Игра создалась
 
 - summary: |
-    Проверка выбора типа игры 
+    Проверка выбора 2 типа игры 
   requirement: |
     Пользователь имеет возможность создать игру определенного типа 
   prerequisites: |
@@ -481,7 +466,7 @@
     Приглашение отправилось
 
 - summary: |
-    Проверка выбора типа игры 
+    Проверка выбора 3 типа игры 
   requirement: |
     Пользователь имеет возможность создать игру определенного типа 
   prerequisites: |
@@ -499,7 +484,7 @@
 
 
 - summary: |
-    Проверка работы ползунка выбора времени игры
+    Проверка работы минимального положения ползунка выбора времени игры
   requirement: |
     Пользователь имеет возможность выбрать минимальную продолжительность игры  
   prerequisites: |
@@ -516,7 +501,7 @@
     Игра создалась
 
 - summary: |
-    Проверка работы ползунка выбора времени игры
+    Проверка работы максимального положения ползунка выбора времени игры
   requirement: |
     Пользователь имеет возможность выбрать максимальную продолжительность игры  
   prerequisites: |
@@ -614,23 +599,6 @@
   expected-result: |
     Отображается модальное окно с подсказками
 
-
-- summary: |
-    Проверка отсутствия подсказок 
-  requirement: |
-    При запуске игры пользователь не должен видеть подсказки, если уже их просматривал или закрывал
-  prerequisites: |
-    - Пользователь авторизован, в local storage есть guideGamePassed = true
-  test-data: |
-    - Login: Kvskgd@gmail.com
-    - Pass: Rainbow7!
-  steps:
-    - Зайти в лобби https://codebattle.hexlet.io/#lobby
-    - Кликнуть на [Create a game]
-    - Нажать [Create Battle]
-  expected-result: |
-    Не отображается модальное окно с подсказками
-
 - summary: |
     Проверка отсутствия подсказок 
   requirement: |
@@ -673,7 +641,7 @@
   requirement: |
     При клике на аватар пользователь должен перейти на страницу пользователя на GitHub
   prerequisites: |
-    - Пользователь авторизован
+    - Пользователь авторизован, имеется аккаунт на Github
   test-data: |
     - Login: Kvskgd@gmail.com
     - Pass: Rainbow7!
@@ -794,11 +762,9 @@
     - Зайти в лобби https://codebattle.hexlet.io/#lobby
     - Кликнуть на [Create a game]
     - Нажать [Create Battle]
-    - Кликнуть на [Light]
-    - Кликнуть на [Dark]
+    - Кликнуть на [Light]/[Dark]
   expected-result: |
-    - Сменилась темная тема на светлую, белый текст стал темным
-    - Сменилась светлая тема на темную, темный текст стал светлым
+    - Темы корректно переключаются
     
 - summary: |
     Проверка работа кнопки [Сдаться]
@@ -819,7 +785,7 @@
     - Отображаются результаты игры 
     
 - summary: |
-    Проверка работа кнопки [Сдаться]
+    Проверка работа отмены [Сдаться]
   requirement: |
     Пользователь может отменить решение о сдаче 
   prerequisites: |
@@ -867,7 +833,8 @@
     - Зайти в лобби https://codebattle.hexlet.io/#lobby
     - Кликнуть на [Create a game]
     - Нажать [Create Battle]
-    - Ввести какой-нибудь текст в поле для ввода 
+    - Выбрать язык Python
+    - Ввести какой-нибудь текст в поле для ввода, например 
     - Кликнуть [Check solution](иконка Play)
   expected-result: |
     - Открылась вкладка Output
@@ -875,7 +842,7 @@
     - Победа в игре
 
 - summary: |
-    Проверка работа кнопки [Смена языка]
+    Проверка работа кнопки [Смена языка] внутри игры
   requirement: |
     Пользователь может сменить язык задания и заголовков
   prerequisites: |
